force-app/main/default/objects/Fiscal_Year_Login_History__c/Fiscal_Year_Login_History__c.object-meta.xml
<CustomObject>
    <description>Mirrors LoginHistory records to track login activity for the full fiscal year (Feb 1 - Jan 31). Used for license optimization since LoginHistory API only provides 6 months of data.</description>
    <label>Fiscal Year Login History</label>
    <nameField>
        <displayFormat>FYLH-{0000}</displayFormat>
        <label>Fiscal Year Login History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fiscal Year Login Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>