force-app/main/default/objects/Fiscal_Year_Login_History__c/fields/Api_Type__c.field-meta.xml
<CustomField>
    <fullName>Api_Type__c</fullName>
    <label>Api Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>