force-app/main/default/objects/Fiscal_Year_Login_History__c/fields/Api_Version__c.field-meta.xml
<CustomField>
    <fullName>Api_Version__c</fullName>
    <label>Api Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>