force-app/main/default/objects/Fiscal_Year_Login_History__c/fields/Browser__c.field-meta.xml
<CustomField>
    <fullName>Browser__c</fullName>
    <label>Browser</label>
    <length>255</length>
    <type>Text</type>
</CustomField>