force-app/main/default/objects/Fiscal_Year_Login_History__c/fields/Client_Version__c.field-meta.xml
<CustomField>
    <fullName>Client_Version__c</fullName>
    <label>Client Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>