force-app/main/default/objects/Fiscal_Year_Login_History__c/fields/Country_Iso__c.field-meta.xml
<CustomField>
    <fullName>Country_Iso__c</fullName>
    <label>Country Iso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>