force-app/main/default/objects/Fiscal_Year_Login_History__c/fields/Login_History_Id__c.field-meta.xml
<CustomField>
    <fullName>Login_History_Id__c</fullName>
    <externalId>true</externalId>
    <label>Login History Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>