force-app/main/default/objects/Fiscal_Year_Login_History__c/fields/Login_Time__c.field-meta.xml
<CustomField>
    <fullName>Login_Time__c</fullName>
    <label>Login Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>