force-app/main/default/objects/Fiscal_Year_Login_History__c/fields/Login_Type__c.field-meta.xml
<CustomField>
    <fullName>Login_Type__c</fullName>
    <label>Login Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>