force-app/main/default/objects/Fiscal_Year_Login_History__c/fields/Source_Ip__c.field-meta.xml
<CustomField>
    <fullName>Source_Ip__c</fullName>
    <label>Source Ip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>