force-app/main/default/objects/Fiscal_Year_Login_History__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Fiscal Year Login Histories</relationshipLabel>
    <relationshipName>Fiscal_Year_Login_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>